@@ -1,3 +1,9 @@
+2007-12-18  Gary Benson  <gbenson@redhat.com>
+
+	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp
+	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp
+	(bang_stack_with_offset): Move function body from header.
+
 2007-12-14  Lillian Angel  <langel@redhat.com>
 
 	* configure.ac: Updated to version 1.5.
